chore(front): Improve readability of the stop details dialog

--- a/front/styles/_reset.scss
+++ b/front/styles/_reset.scss
@@ -25,3 +25,8 @@ button {
 p:last-child {
   margin-bottom: 0;
 }
+
+* {
+  grid-auto-rows: minmax(0, 1fr);
+  grid-auto-columns: minmax(0, 1fr);
+}
