--- a/front/styles/ui/_popup.scss
+++ b/front/styles/ui/_popup.scss
@@ -91,7 +91,7 @@
   max-width: 500px;
   min-width: 200px;
 
-  border-radius: 2px;
+  border-radius: 3px;
 
   .ui-popup__arrow {
     position: absolute;
